fixed plankton going off screen

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body{
   background-image: url("https://vignette.wikia.nocookie.net/spongebob/images/4/47/Bikini-bottom.jpg/revision/latest?cb=20171020225427");
   font-size: 18px;
   background-repeat: no-repeat;
+  overflow-x: hidden; 
+  overflow-y: hidden;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -20,7 +22,7 @@ body, a:link, a:visited, a:active{
   background-color: #555;
 }
 .dancefloor{
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 .title{
